--- a/index-en.html
+++ b/index-en.html
@@ -312,42 +312,42 @@
                                                                                                                 </style>
                                                                                                                 <div class="soon-p">
                                                                                                                     <p class="hd">
+                                                                                                                        &nbsp;Eligibility&nbsp;
+                                                                                                                    </p>
+                                                                                                                    <p><strong>July 1 Onwards</strong>
+                                                                                                                    </p>
+
+                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    </p>
+                                                                                                                    <p>&nbsp;</p>																													
+																													
+                                                                                                                    <p class="hd">
                                                                                                                         &nbsp;Pre-order&nbsp;
                                                                                                                     </p>
 
-                                                                                                                    <p><strong>From
-                                                                                                                            July
-                                                                                                                            1
-                                                                                                                            to
-                                                                                                                            July
-                                                                                                                            7</strong>
+                                                                                                                    <p><strong>From July 1 to July 7</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p><strong>Citizens and spouses from overseas with residency permits</strong> may pre-order vouchers from this website and designate at which convenience store to pick them up. Pay online or at the counter of the convenience store after printing out a payment slip at its self-service kiosk.
+                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may pre-order vouchers from this website and designate at which convenience store to pick them up. They are to make a payment online or at the counter of the convenience store after printing out the payment slip from the self-service kiosk.
                                                                                                                     </p>
 
-                                                                                                                    <p><strong>July
-                                                                                                                            15 Onwards</strong>
+                                                                                                                    <p><strong>July 15 Onwards</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Resident Certificate) to collect the vouchers from your
-                                                                                                                        designated convenience store.
+                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Alien Resident Certificates (ARCs)) to collect the vouchers from your designated convenience store.
                                                                                                                     </p>
 
                                                                                                                     <p>&nbsp;
                                                                                                                     </p>
 
                                                                                                                     <p class="hd">
-                                                                                                                        <span>Direct
-                                                                                                                            purchase</span>
+                                                                                                                        <span>Direct purchase</span>
                                                                                                                     </p>
 
-                                                                                                                    <p><strong>July
-                                                                                                                            15 Onwards</strong>
+                                                                                                                    <p><strong>July 15 Onwards</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Alien Permanent Residence Certificate) purchase the vouchers
-                                                                                                                        from post offices.
+                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Alien Resident Certificates (ARCs)) to purchase the vouchers from the post offices.
                                                                                                                     </p>
                                                                                                                 </div>
                                                                                                             </div>
@@ -363,13 +363,16 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <div class="soon-p">
-                                                                                                                    <p>Starting from
-                                                                                                                        <strong>July 1</strong> , eligible R.O.C. citizens and spouses from overseas with residency permits may link one of their credit cards to the voucher program
-                                                                                                                        through this website. Those who spend for
+                                                                                                                    <p class="hd">
+                                                                                                                        &nbsp;Eligibility&nbsp;
+                                                                                                                    </p>
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    </p>
+                                                                                                                    <p>&nbsp;</p>
+																													
+                                                                                                                    <p>From <strong>July 1 onwards,</strong> both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link one of their credit cards to the voucher program through this website. Those who spend for 
                                                                                                                         <strong>NT$3,000</strong> by
-                                                                                                                        <strong>31st
-                                                                                                                        December
-                                                                                                                        2020</strong>                                                                                                                        will be notified,
+                                                                                                                        <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong>NT$2,000</strong> credit will be returned towards the linked credit cards from next monthly credit card bill.
                                                                                                                     </p>
                                                                                                                 </div>
@@ -386,11 +389,13 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <div class="soon-p">
-                                                                                                                    <p>From
-                                                                                                                        <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link a name-based card to the voucher program through this website. Those who spend
-                                                                                                                        for
-                                                                                                                        <strong>NT$3,000</strong> by
+                                                                                                                    <p class="hd">
+                                                                                                                        &nbsp;Eligibility&nbsp;
+                                                                                                                    </p>
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    </p>
+                                                                                                                    <p>&nbsp;</p>																												
+                                                                                                                    <p>From <strong>July 1 onwards,</strong> both eligible Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link a name-based card to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong> NT$2,000</strong> will be returned towards the linked stored valued cards.
                                                                                                                     </p>
@@ -417,11 +422,13 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <div class="soon-p">
-                                                                                                                    <p>From
-                                                                                                                        <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link their preferred mobile payment app to the voucher program through this website.
-                                                                                                                        Those who spend for
-                                                                                                                        <strong>NT$3,000</strong> by
+                                                                                                                    <p class="hd">
+                                                                                                                        &nbsp;Eligibility&nbsp;
+                                                                                                                    </p>
+                                                                                                                    <p>From <strong>July 1 onwards,</strong>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    </p>
+                                                                                                                    <p>&nbsp;</p>
+																													<p>From <strong>July 1 onwards,</strong> both eligible R.O.C. citizens and foreign spouses who hold Alien Resident Certificates (ARCs) may link their preferred mobile payment app to the voucher program through this website. Those who spend for <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong>NT$2,000</strong> will be returned towards the linked mobile payment app.
                                                                                                                     </p>
